@@ -21,9 +21,6 @@ CIrrBPSphereBody::CIrrBPSphereBody(irr::scene::ISceneNode *node, irr::f32 mass, 
 
    m_RigidBody = new btRigidBody(mass, m_MotionState, m_Shape, LocalInertia);
    
-   m_RigidBody->setUserPointer((void *)(node));
-
-//   m_RigidBody->setActivationState(DISABLE_DEACTIVATION);
    collisionObj = m_RigidBody;
    setAutomaticCCD();
 }
